--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "next dev -p 3333",
     "build": "next build",
     "start": "next start -p 3333",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
@@ -43,8 +45,10 @@
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
+    "better-sqlite3": "^12.6.2",
     "clsx": "^2.1.1",
     "commander": "^14.0.3",
+    "drizzle-orm": "^0.45.1",
     "json5": "^2.2.3",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
@@ -53,6 +57,8 @@
     "picocolors": "^1.1.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.7.0",
     "sharp": "^0.34.5",
     "swr": "^2.4.0",
@@ -60,9 +66,18 @@
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
-    "@types/sharp": "^0.31.1"
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/sharp": "^0.31.1",
+    "@types/uuid": "^10.0.0",
+    "drizzle-kit": "^0.31.8",
+    "jsdom": "^28.0.0",
+    "vitest": "^4.0.18"
   }
 }
